Fix unwanted line breaks in position dates in Safari

--- a/_sass/_page-about.scss
+++ b/_sass/_page-about.scss
@@ -95,6 +95,7 @@
    @extend %font-size--x-small;
    @include flexbox();
    @include align-items(center);
+   white-space: nowrap;
    padding: 0 1.6em;
    border: 1px solid $color-background--highlight;
    border-left: none;
